--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,28 @@
         @apply after:content-['DEBUG'] after:absolute;
     }
 
-    .link {
+    h1 {
+        @apply text-4xl;
+    }
+
+    h2 {
+        @apply text-3xl;
+    }
+
+    h3 {
+        @apply text-2xl;
+    }
+
+    h4 {
+        @apply text-xl;
+    }
+
+    a {
         @apply hover:underline text-cyan-500;
+    }
+
+    li {
+        @apply list-disc ml-4;
     }
 
 }
